resolved JSLint error function inside a loop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="search-area">
-    <input class="search-box" data-bind="textInput: filter" />
+    <input class="search-box" placeholder="type in name to filter list" data-bind="textInput: filter" />
     <h1>Neighborhood Map: Bars in Santa Clara</h1>
   </div>
 
