added error handlers for google maps and foursquare api

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!--- ko --->
   <script src = "js/knockout-3.4.2.js"></script>
   <!--- gmap --->
-  <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyC1KA98TYsCXOvyWF8RB4LnoW-UrtMAWgE"></script>
+  <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyC1KA98TYsCXOvyWF8RB4LnoW-UrtMAWgE" async defer></script>
 
 </body>
 
