--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 
   <div id="map-container"></div>
 
+  <!--- ko --->
+  <script src = "js/knockout-3.4.2.js"></script>
   <!--- jquery --->
   <script src = "js/jquery-3.2.1.min.js"></script>
   <!--- app.js --->
   <script src = "js/app.js"></script>
-  <!--- ko --->
-  <script src = "js/knockout-3.4.2.js"></script>
   <!--- gmap --->
-  <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyC1KA98TYsCXOvyWF8RB4LnoW-UrtMAWgE" async defer></script>
+  <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyC1KA98TYsCXOvyWF8RB4LnoW-UrtMAWgE&callback=initMap" async defer onerror="mapError()" ></script>
+
 
 </body>
 
