--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>Neighborhood Map</title>
   <meta name="viewport" content="width = device-width, initial-scale = 1">
-  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alef" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -15,26 +15,25 @@
 
   <hr>
 
-  <button class="hamburger" data-bind="click: $root.hamburgerClick">&#9776;</button>
-  <div class="sidenav">
-    <div class="list-menu">
+  <button class="hamburger" data-bind="click: hamburgerClick">&#9776;</button>
+  <div data-bind="css: { 'sidenav-open': sidenavToggle }">
+    <div data-bind="visible: sidenavToggle" class="list-menu">
       <ul class="location-list" data-bind="foreach: searchUpdate">
         <li data-bind="text: name, click: $root.onClick"></li>
-      <ul>
+      </ul>
     </div>
   </div>
 
   <div id="map-container"></div>
 
-  <!--- ko --->
+  <!--- ko -->
   <script src = "js/knockout-3.4.2.js"></script>
-  <!--- jquery --->
+  <!--- jquery -->
   <script src = "js/jquery-3.2.1.min.js"></script>
-  <!--- app.js --->
+  <!--- app.js -->
   <script src = "js/app.js"></script>
-  <!--- gmap --->
+  <!--- gmap -->
   <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyC1KA98TYsCXOvyWF8RB4LnoW-UrtMAWgE&callback=initMap" async defer onerror="mapError()" ></script>
-
 
 </body>
 
